# AudioAugmentor_public

./: .gitignore  LICENSE  OrbitalMechanics_HW.ipynb  README.md  pyproject.toml  requirements.txt  rir_setup.py  sox_parser.py  transf_gen.py
AudioAugmentor/: core.py  sox_parser.py  torchaudio_transf_wrapper.py  transf_gen.py
data/: effects.txt  sox_file_example.txt
data/LibriSpeechSmall/train-clean-100/103/1240/: 103-1240-0010.flac  103-1240-0011.flac  103-1240-0012.flac  103-1240-0013.flac  103-1240-0014.flac  103-1240-0015.flac  103-1240-0016.flac  103-1240-0017.flac  103-1240-0018.flac  103-1240-0019.flac  103-1240.trans.txt
data/RIRS/: RIRsource.txt
data/musan/: MUSANsource.txt
examples/: sox_file_example.txt
testing/whisper/: fine_tune_whisper.ipynb
