# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["AudioAugmentor"]

[project]
name = "AudioAugmentor"
version = "0.1.0"
description = "Python package for simple application of wide range of audio augmentations."
readme = "README.md"
authors = [{ name = "Ladislav Vašina", email = "ladislavvasina@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

keywords = [
    "audio", 
    "augmentation", 
    "pytorch",
    "machine learning", 
    "deep learning",
    "data augmentation",
    "audio processing",
    "audio augmentation",
    "audio data augmentation",
    "audio data processing",
    "torchaudio",
    "ffmpeg",
    "ffmpeg-python",
    "audiomentations",
    "torch-audiomentations",
    "RIR",
    "room impulse response",
    "room simulation",
    "pyroomacoustics",
]

dependencies = [
    'audiomentations==0.34.1',
    'audiomentations[extras]',
    'datasets==2.17.1',
    'ffmpeg_python==0.2.0',
    'huggingface_hub==0.20.3',
    'ipython==8.12.3',
    'matplotlib==3.8.3',
    'numpy==1.24.4',
    'pyroomacoustics==0.7.3',
    'PyYAML==6.0.1',
    'SciPy==1.10.1',
    'soundfile==0.12.1',
    'torch==2.2.0',
    'torch_audiomentations==0.11.1',
    'torchaudio==2.2.0',
    'transformers',
    'pydub',
    'accelerate',
    'soundfile',
    'librosa',
    'evaluate',
    'jiwer',
    'tensorboard',
    'gradio',
    'ffmpeg-python',
    'torch_pitch_shift',
    'julius',
    'tqdm',
    'shapely',
    'py-heat-magic'
]

requires-python = ">=3.10"


[project.urls]
Homepage = "https://github.com/LadislavVasina1/AudioAugmentor_public"
Repository = "https://github.com/LadislavVasina1/AudioAugmentor_public"
Issues = "https://github.com/LadislavVasina1/AudioAugmentor_public/issues"
